Clear history button moved
Clear history button moved

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             <button id="createBox" class="btn">Create New Lootbox</button>
             <button id="saveBox" class="btn">Save Lootbox</button>
             <button id="loadBox" class="btn">Load Lootbox</button>
-            <button id="resetSession" class="btn">Reset Session</button>
         </div>
         
         <div id="result" class="result hidden">
@@ -76,6 +75,7 @@
             <div class="editor-controls">
                 <button id="saveChanges" class="btn">Save Changes</button>
                 <button id="cancelEdit" class="btn">Cancel</button>
+                <button id="clearHistory" class="btn btn-secondary">Clear History</button>
             </div>
         </div>
         
