--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </div>
         
         <div class="main-controls">
-            <button id="openBox" class="btn">Open Lootbox</button>
-            <button id="editBox" class="btn">Edit Lootbox</button>
-            <button id="createBox" class="btn">Create New Lootbox</button>
-            <button id="saveBox" class="btn">Save Lootbox</button>
-            <button id="loadBox" class="btn">Load Lootbox</button>
+            <button id="openBox" class="btn">Open</button>
+            <button id="editBox" class="btn">Edit</button>
+            <button id="createBox" class="btn">Create New</button>
+            <button id="saveBox" class="btn">Save</button>
+            <button id="loadBox" class="btn">Load</button>
         </div>
         
         <div id="result" class="result hidden">
