text added to lootbox area

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <div id="currentBox" class="current-box">
             <h3 id="currentBoxName">Default Box</h3>
             <div id="triesRemaining" class="tries-remaining">Unlimited tries</div>
+            <div id="clickToOpen" class="click-to-open">(Click Here to Open)</div>
             <div id="currentItems" class="current-items"></div>
         </div>
         
